# TableIntelligence

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  prompt.md  pyproject.toml
.claude/skills/: raise-pr.md  work-on-a-feature.md
docs/: adding-an-algorithm.md  algorithms.md  architecture.md  roadmap.md  vision.md
src/tabular/: __init__.py  identity.py  loader.py  results.py  session.py  store.py
src/tabular/analytics/: __init__.py  association.py  clustering.py  descriptive.py  dimreduction.py  interpretation.py  supervised.py  timeseries.py
src/tabular/jobs/: __init__.py  registry.py  runner.py
src/tabular/validation/: __init__.py  assumptions.py  dtypes.py
tests/: test_identity.py  test_smoke.py  test_store.py
tests/fixtures/: customers.csv  edge_cases.csv  employees.csv  loan_applications.csv  products.csv  sensor_readings.csv
