[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tabular"  # PLACEHOLDER — rename before any public release
version = "0.0.0"
description = "A deterministic, reproducible intelligence layer for single-table data."
requires-python = ">=3.10"
dependencies = [
    "duckdb",
    "pandas",
    "numpy",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
